force-app/main/default/objects/Combo__c/Combo__c.object-meta.xml
<CustomObject>
    <label>Combo</label>
    <nameField>
        <label>Nombre de Combo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Combos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>