force-app/main/default/objects/Combo__c/fields/Cantidad_Combo__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Combo__c</fullName>
    <label>Cantidad</label>
    <summarizedField>Combo_Accesorio__c.Cantidad__c</summarizedField>
    <summaryForeignKey>Combo_Accesorio__c.Combo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>