force-app/main/default/objects/Combo__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>