force-app/main/default/objects/Combo__c/fields/Marca_habilitada__c.field-meta.xml
<CustomField>
    <fullName>Marca_habilitada__c</fullName>
    <label>Marca habilitada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MULTIMARCA</fullName>
            </value>
            <value>
                <fullName>GENESIS</fullName>
            </value>
            <value>
                <fullName>HERO</fullName>
            </value>
            <value>
                <fullName>HINO</fullName>
            </value>
            <value>
                <fullName>JMC</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
            </value>
            <value>
                <fullName>SUZUKI</fullName>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
            </value>
            <value>
                <fullName>YAMAHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>