force-app/main/default/objects/Combo__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo habilitado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Marca_habilitada__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21AC-A5</fullName>
            </value>
            <value>
                <fullName>22BKT-BL</fullName>
            </value>
            <value>
                <fullName>4RUNNER4x4-LTD</fullName>
            </value>
            <value>
                <fullName>4RUNNER4x4-SR5</fullName>
            </value>
            <value>
                <fullName>AG200F</fullName>
            </value>
            <value>
                <fullName>AGYA A4</fullName>
            </value>
            <value>
                <fullName>AGYA AUT</fullName>
            </value>
            <value>
                <fullName>AGYA C5</fullName>
            </value>
            <value>
                <fullName>AGYA MEC</fullName>
            </value>
            <value>
                <fullName>ALTO DLX 800</fullName>
            </value>
            <value>
                <fullName>APV BUS GL</fullName>
            </value>
            <value>
                <fullName>BALENO GL</fullName>
            </value>
            <value>
                <fullName>BALENO GL AUT</fullName>
            </value>
            <value>
                <fullName>BASE-CVT</fullName>
            </value>
            <value>
                <fullName>BASE-MT</fullName>
            </value>
            <value>
                <fullName>BU150-DECK</fullName>
            </value>
            <value>
                <fullName>CAMRY-25AUT</fullName>
            </value>
            <value>
                <fullName>CAMRY-35AUT</fullName>
            </value>
            <value>
                <fullName>CARNIVAL EX</fullName>
            </value>
            <value>
                <fullName>CELERIO</fullName>
            </value>
            <value>
                <fullName>CELERIO-DLX-AUT</fullName>
            </value>
            <value>
                <fullName>COASTER</fullName>
            </value>
            <value>
                <fullName>COROLLA AUT</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS AD</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS AE</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS AUT BAS</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS AUT FULL</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS AUT INT</fullName>
            </value>
            <value>
                <fullName>COROLLA CROSS CA</fullName>
            </value>
            <value>
                <fullName>DASH125</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>